@@ -1,8 +1,8 @@
-Just stick the directory somewhere for now, edit rbotconf/conf.rbot and run
-./rbot.rb.
+Just run rbot, it'll ask you for any core information it needs before it can
+start, after that you can configure everything else online using the config
+module.
 
-You can maintain multiple configurations at once, start rbot with the
-location you want it to store runtime data in. By default, running ./rbot.rb
-uses the rbotconf subdirectory which contains a sample configuration. If you
-run ./rbot.rb ~/.rbot, then the configuration will be stored and read from
-there instead.
+You can maintain multiple configurations at once. Start rbot with the
+location you want it to store runtime data in. By default, running rbot
+uses the ~/.rbot config directory. If you run 'rbot /path/to/foo', then the
+configuration will be stored to and read from there instead.
