@@ -36,7 +36,7 @@ rescue LoadError => e
 end
   
 $debug = false
-$version="0.9.8"
+$version="0.9.9"
 $opts = Hash.new
 
 # print +message+ if debugging is enabled
