@@ -1,3 +1,7 @@
+Wed Aug 03 00:31:41 BST 2005  Tom Gilbert <tom@linuxbrit.co.uk>
+
+  * Added Rakefile, tweaked gemspec
+
 Tue Aug 02 16:27:36 BST 2005  Tom Gilbert <tom@linuxbrit.co.uk>
 
   * Fixed the new http.proxy* settings, they work!
